--- a/sections/main-blog.liquid
+++ b/sections/main-blog.liquid
@@ -1,5 +1,5 @@
 {% for article in blogs.news.articles %}
-  {% if forloop.last == true %}
+  {% if forloop.first == true %}
     <div class="banner-blog">
       <div class="banner-blog-wrap">
         <div class="banner-blog-text">
