--- a/sections/main-list-collections.liquid
+++ b/sections/main-list-collections.liquid
@@ -1,6 +1,5 @@
 <div class="[ js-gradient-background ]"></div>
 
-
 <div class="collection-grid">
   <div class="collection-grid-wave1 [ js-wave ]">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1366 768">
@@ -14,8 +13,7 @@
     </svg>
   </div>
 
-{% render 'grid-slide' %}
-
+  {% render 'grid-slide' %}
 
   {% assign ordered_collections = 'postpartum,v-delivery,c-section-delivery,pregnancy,breast-care' | split: ',' %}
 
@@ -23,7 +21,10 @@
     {% for ordered_handle in ordered_collections %}
       {% assign collection = collections[ordered_handle] %}
       {% if collection.products.size > 0 %}
-        <div class="collection-grid__list__title [ js-in-view ]" data-handle="{{ collection.handle | downcase | replace: ' ', '-' }}">
+        <div
+          class="collection-grid__list__title [ js-in-view ]"
+          data-handle="{{ collection.handle | downcase | replace: ' ', '-' }}"
+        >
           <h2 class="h1">
             <b>{{ collection.title }}</b>
           </h2>
@@ -81,6 +82,25 @@
             </a>
           </div>
         {% endfor %}
+      {% else %}
+        <div
+          class="collection-grid__list__title [ js-in-view ]"
+          data-handle="{{ collection.handle | downcase | replace: ' ', '-' }}"
+        >
+          <h2 class="h1">
+            <b>{{ collection.title }}</b>
+          </h2>
+        </div>
+        <div class="[ js-gradient ]" data-collection="{{ collection.title }}"></div>
+        <div class="banner banner--text" style="margin-top : -15rem">
+          <div class="banner-text">
+            <div class="banner-constraint">
+              <h1 class="black">
+                <b> COMMING SOON </b>
+              </h1>
+            </div>
+          </div>
+        </div>
       {% endif %}
     {% endfor %}
   </div>
