--- a/source/sections/collection-grid.scss
+++ b/source/sections/collection-grid.scss
@@ -15,6 +15,10 @@
     padding-bottom: 4rem;
     overflow: hidden;
 
+    .js-gradient{
+        width: 100%;
+    }
+
     .flickity-button {
         background: rgba(white, 0.3);
 
