updated the prsets

--- a/sections/main-blog.liquid
+++ b/sections/main-blog.liquid
@@ -181,6 +181,12 @@
       "id": "thumbnail",
       "label": "thumbnail"
     }
+  ],
+  "presets": [
+    {
+      "name": "Main Blog",
+      "category": "Blog"
+    }
   ]
 }
 {% endschema %}
