More updates to the blog section

--- a/sections/main-blog.liquid
+++ b/sections/main-blog.liquid
@@ -1,35 +1,31 @@
-{% for article in blogs.news.articles %}
-  {% if forloop.first == true %}
-    <div class="banner-blog">
-      <div class="banner-blog-wrap">
-        <div class="banner-blog-text">
-          <div class="banner-blog-text__constraint">
-            <h6 class="white">
-              <b>{{ article.tags | join: ' | ' | upcase }}</b>
-            </h6>
-            <h1 class="white">
-              <b>
-                {{ article.title }}
-              </b>
-            </h1>
-            <p class="white">{{ article.excerpt }}</p>
-          </div>
-        </div>
-
-        <div class="banner-blog-image">
-          <img
-            src="{{ article.image | image_url: width: 640 | image_url: height: 480 }}"
-            alt="grid item image"
-            loading="lazy"
-            width="640"
-            height="480"
-          >
-          <div class="banner-blog-image__shadow"></div>
-        </div>
+<div class="banner-blog">
+  <div class="banner-blog-wrap">
+    <div class="banner-blog-text">
+      <div class="banner-blog-text__constraint">
+        <h6 class="white">
+          <b>{{ section.settings.subheading }}</b>
+        </h6>
+        <h1 class="white">
+          <b>
+            {{ section.settings.heading }}
+          </b>
+        </h1>
+        {{ section.settings.content }}
       </div>
     </div>
-  {% endif %}
-{% endfor %}
+
+    <div class="banner-blog-image">
+      <img
+        src="{{ section.settings.thumbnail | image_url: width: 640 | image_url: height: 480 }}"
+        alt="grid item image"
+        loading="lazy"
+        width="640"
+        height="480"
+      >
+      <div class="banner-blog-image__shadow"></div>
+    </div>
+  </div>
+</div>
 
 {% comment %}
   Related articles
