--- a/source/sections/banner-blog.scss
+++ b/source/sections/banner-blog.scss
@@ -1,3 +1,7 @@
+.banner-blog-text__constraint p {
+    color: white !important;
+}
+
 .banner-blog {
     position: relative;
     background: var(--blue-mid);
