updated the accordion apadding

--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -93,6 +93,8 @@
             {{ product.price | money }}
           </b>
         </p>
+
+        <div class="yotpo-widget-instance" data-yotpo-instance-id="570671" data-yotpo-product-id="{{product.id}}" data-yotpo-cart-product-id="{{item.product.id}}" data-yotpo-section-id="{{template.name}}"></div>
       </div>
 
       <afterpay-placement
