--- a/sections/main-404.liquid
+++ b/sections/main-404.liquid
@@ -1,1 +1,16 @@
-<h1>Main 404</h1>
+<div class="fourOhFour">
+  <div class="fourOhFour__wrap">
+    <div class="fourOhFour__wrap__number">
+      <h1>404</h1>
+    </div>
+
+    <div class="fourOhFour__wrap__sentence">
+      <h4 class="colour--green"><strong>Ooops!</strong> Looks like baby brain got the best of us.</h4>
+    </div>
+
+    <div class="fourOhFour__wrap__button">
+      <br>
+      <p><a href="/" class="button button--white">Take me back home</a></p>
+    </div>
+  </div>
+</div>
