--- a/sections/main-article.liquid
+++ b/sections/main-article.liquid
@@ -132,7 +132,7 @@
           {% endunless %}
         {% endif %}
       {% endfor %}
-    {% endfor %}w
+    {% endfor %}
 
     {% assign recent_articles = blog.articles | sort: 'published_at' | reverse %}
 
