--- a/sections/main-list-collections.liquid
+++ b/sections/main-list-collections.liquid
@@ -96,7 +96,7 @@
           <div class="banner-text">
             <div class="banner-constraint">
               <h1 class="black">
-                <b> COMMING SOON </b>
+                <b> COMING SOON </b>
               </h1>
             </div>
           </div>
