--- a/source/sections/blog.scss
+++ b/source/sections/blog.scss
@@ -47,9 +47,8 @@ List items
 
 ul {
     list-style: none;
-    margin: 1rem auto 3rem;
+    margin: 0 auto 3rem;
     word-break: break-word;
-    margin-top: 2rem;
 
     ul,
     ol {
