--- a/source/sections/related-products.scss
+++ b/source/sections/related-products.scss
@@ -108,10 +108,53 @@
             will-change: transform;
             backface-visibility: hidden;
             will-change: transform;
-            animation: marquee-move-text 26s linear infinite forwards;
+            animation: marquee-move-text-related-products 6s linear infinite forwards;
             animation-play-state: running;
 
             span {
+                line-height: 8vw;
+                font-weight: 700;
+                white-space: nowrap;
+                font-size: 7vw;
+                padding: 4rem 1rem;
+                color: transparent;
+                -webkit-text-fill-color: transparent;
+                -webkit-text-stroke-width: 1px;
+                -webkit-text-stroke-color: white;
+            }
+        }
+    }
+}
+
+@keyframes marquee-move-text-related-products {
+    to {
+        transform: translateX(-17.5%);
+    }
+}
+
+.marquee-element {
+    white-space: nowrap;
+    display: flex;
+    flex-wrap: wrap;
+    white-space: nowrap;
+    overflow: clip;
+    margin: 10rem 0;
+
+    &__track {
+        display: flex;
+        width: max-content;
+        backface-visibility: hidden;
+        will-change: transform;
+        animation: marquee-move-text 26s linear infinite forwards;
+        animation-play-state: running;
+
+        span {
+            white-space: nowrap;
+            font-size: 11rem;
+            padding: 1rem 1rem;
+            position: relative;
+
+            b {
                 line-height: 8vw;
                 font-weight: 700;
                 white-space: nowrap;
