--- a/source/style.scss
+++ b/source/style.scss
@@ -17,6 +17,7 @@ Base includes
 @import 'sections/header';
 @import 'sections/choices';
 @import 'sections/footer';
+@import 'sections/fourohfour';
 @import 'sections/mobile-navigation';
 @import 'sections/announcement';
 @import 'sections/banner';
