--- a/source/sections/mobile-navigation.scss
+++ b/source/sections/mobile-navigation.scss
@@ -74,6 +74,7 @@
             &__link {
                 @include bold;
                 display: inline-block;
+                text-transform: capitalize;
 
                 padding: 2rem 0;
                 font-size: 6rem;
