--- a/source/sections/blog.scss
+++ b/source/sections/blog.scss
@@ -79,7 +79,7 @@ ol {
     list-style: none;
     margin: 1rem auto 3rem;
     word-break: break-word;
-    margin-top: 2rem;
+    margin-top: 0;
 
     ul,
     ol {
