--- a/sections/grid-block.liquid
+++ b/sections/grid-block.liquid
@@ -36,30 +36,7 @@
     {%- for block in section.blocks -%}
       {% assign count = count | plus: 1 %}
 
-      {%- if block.settings.article != blank -%}
-        <a
-          href="{{ block.settings.article.url }}"
-          class="grid__item grid__item--{% if count == 1 %}large{% else %}small{% endif %}"
-        >
-          <div class="grid__item__image">
-            {%- if block.settings.article.image != blank -%}
-              {% if count == 1 %}
-                {{ block.settings.article.image | image_url: width: 690 | image_url: height: 690 | image_tag }}
-              {% else %}
-                {{ block.settings.article.image | image_url: width: 690 | image_url: height: 340 | image_tag }}
-              {% endif %}
-            {%- endif -%}
-          </div>
-          <div class="grid__item__copy">
-            <h5 class="colour--white">
-              <b> {{ block.settings.article.title }}</b>
-            </h5>
-            <p class="colour--white">
-              {{ block.settings.article.copy }}
-            </p>
-          </div>
-        </a>
-      {% else %}
+      {%- if block.settings.image != blank -%}
         <a
           href="{{ block.settings.link_link }}"
           class="grid__item grid__item--{% if count == 1 %}large{% else %}small{% endif %}"
@@ -79,6 +56,29 @@
             </h5>
             <p class="colour--white">
               {{ block.settings.copy }}
+            </p>
+          </div>
+        </a>
+      {% else %}
+        <a
+          href="{{ block.settings.article.url }}"
+          class="grid__item grid__item--{% if count == 1 %}large{% else %}small{% endif %}"
+        >
+          <div class="grid__item__image">
+            {%- if block.settings.article.image != blank -%}
+              {% if count == 1 %}
+                {{ block.settings.article.image | image_url: width: 690 | image_url: height: 690 | image_tag }}
+              {% else %}
+                {{ block.settings.article.image | image_url: width: 690 | image_url: height: 340 | image_tag }}
+              {% endif %}
+            {%- endif -%}
+          </div>
+          <div class="grid__item__copy">
+            <h5 class="colour--white">
+              <b> {{ block.settings.article.title }}</b>
+            </h5>
+            <p class="colour--white">
+              {{ block.settings.article.copy }}
             </p>
           </div>
         </a>
