--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -152,7 +152,7 @@
               data-id="Postpartum"
               class="mobile-navigation-menu__item__link mobile-navigation-menu__item__link--small animate-white-to-green {% if link.active %}mobile-navigation-menu__item__link--current{% endif %}"
             >
-              Post Partum
+              Postpartum
             </a>
           </div>
           <div class="mobile-navigation-menu__item">
