--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -95,13 +95,11 @@
           </b>
         </p>
 
-        <div
-          class="yotpo-widget-instance"
-          data-yotpo-instance-id="570671"
-          data-yotpo-product-id="{{product.id}}"
-          data-yotpo-cart-product-id="{{item.product.id}}"
-          data-yotpo-section-id="{{template.name}}"
-        ></div>
+        <!-- Start of Judge.me code -->
+        <div class="jdgm-widget jdgm-preview-badge" data-id="{{ product.id }}">
+          {{ product.metafields.judgeme.badge }}
+        </div>
+        <!-- End of Judge.me code -->
       </div>
 
       <afterpay-placement
@@ -361,7 +359,18 @@
 
 <div class="reviews">
   <div class="reviews__wrap">
-    <script type="text/javascript">
+
+
+    <!-- Start of Judge.me code --> 
+  <div style='clear:both'></div> 
+  <div id='judgeme_product_reviews' class='jdgm-widget jdgm-review-widget' data-id='{{ product.id }}'> 
+    {{ product.metafields.judgeme.widget }} 
+  </div> 
+<!-- End of Judge.me code -->
+
+
+
+    {% comment %} <script type="text/javascript">
       (function e() {
         var e = document.createElement('script');
         (e.type = 'text/javascript'),
@@ -381,6 +390,6 @@
       data-price="{{ variant.price | money_without_currency }}"
       data-currency="{{ shop.currency }}"
       data-description="{{ product.description | escape }}"
-    ></div>
+    ></div> {% endcomment %}
   </div>
 </div>
