--- a/source/sections/collections.scss
+++ b/source/sections/collections.scss
@@ -534,6 +534,7 @@
             }
         }
 
+        .marquee-element__track span b,
         .collections__marquee__animation span {
             -webkit-text-stroke-color: var(--orange);
         }
@@ -595,6 +596,7 @@
             }
         }
 
+        .marquee-element__track span b,
         .collections__marquee__animation span {
             -webkit-text-stroke-color: var(--pink);
         }
@@ -643,6 +645,7 @@
             }
         }
 
+        .marquee-element__track span b,
         .collections__marquee__animation span {
             -webkit-text-stroke-color: var(--green);
         }
