--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -359,37 +359,35 @@
 
 <div class="reviews">
   <div class="reviews__wrap">
+    <!-- Start of Judge.me code -->
+    <div style="clear:both"></div>
+    <div id="judgeme_product_reviews" class="jdgm-widget jdgm-review-widget" data-id="{{ product.id }}">
+      {{ product.metafields.judgeme.widget }}
+    </div>
+    <!-- End of Judge.me code -->
 
+    {% comment %}
+      <script type="text/javascript">
+        (function e() {
+          var e = document.createElement('script');
+          (e.type = 'text/javascript'),
+            (e.async = true),
+            (e.src = 'https://staticw2.yotpo.com/JxEyiC9n5SoKqDH4Fb95zCfSuBU0OmI5FIS55jG5/widget.js');
+          var t = document.getElementsByTagName('script')[0];
+          t.parentNode.insertBefore(e, t);
+        })();
+      </script>
 
-    <!-- Start of Judge.me code --> 
-  <div style='clear:both'></div> 
-  <div id='judgeme_product_reviews' class='jdgm-widget jdgm-review-widget' data-id='{{ product.id }}'> 
-    {{ product.metafields.judgeme.widget }} 
-  </div> 
-<!-- End of Judge.me code -->
-
-
-
-    {% comment %} <script type="text/javascript">
-      (function e() {
-        var e = document.createElement('script');
-        (e.type = 'text/javascript'),
-          (e.async = true),
-          (e.src = 'https://staticw2.yotpo.com/JxEyiC9n5SoKqDH4Fb95zCfSuBU0OmI5FIS55jG5/widget.js');
-        var t = document.getElementsByTagName('script')[0];
-        t.parentNode.insertBefore(e, t);
-      })();
-    </script>
-
-    <div
-      class="yotpo yotpo-main-widget"
-      data-product-id="{{ product.id }}"
-      data-name="{{ product.title | escape }}"
-      data-url="{{ shop.url }}{{ product.url }}"
-      data-image-url="{{ product.featured_image | image_url: 'large' | replace: '?', '%3F' | replace: '&', '%26' }}"
-      data-price="{{ variant.price | money_without_currency }}"
-      data-currency="{{ shop.currency }}"
-      data-description="{{ product.description | escape }}"
-    ></div> {% endcomment %}
+      <div
+        class="yotpo yotpo-main-widget"
+        data-product-id="{{ product.id }}"
+        data-name="{{ product.title | escape }}"
+        data-url="{{ shop.url }}{{ product.url }}"
+        data-image-url="{{ product.featured_image | image_url: 'large' | replace: '?', '%3F' | replace: '&', '%26' }}"
+        data-price="{{ variant.price | money_without_currency }}"
+        data-currency="{{ shop.currency }}"
+        data-description="{{ product.description | escape }}"
+      ></div>
+    {% endcomment %}
   </div>
 </div>
