More updates added to the mobile site

--- a/source/sections/collections.scss
+++ b/source/sections/collections.scss
@@ -15,6 +15,12 @@
     padding-bottom: 4rem;
     overflow: hidden;
 
+    @include media($md, max) {
+        .flickity-slider {
+            margin-left: -2rem;
+        }
+    }
+
     &.loading {
         .infinity-loader {
             opacity: 1;
@@ -82,8 +88,6 @@
         overflow: auto;
         white-space: nowrap;
         padding: 0 2rem;
-        // -webkit-overflow-scrolling: touch; /* Enables smooth scrolling on iOS */
-        // scrollbar-width: thin;
 
         * {
             user-select: none;
@@ -137,6 +141,9 @@
             align-items: flex-start;
             align-content: flex-start;
             border-bottom: 0px solid var(--green);
+            min-width: 4rem;
+            width: 12rem;
+            // width: fit-content;
 
             &.active {
                 img {
@@ -209,6 +216,15 @@
                     text-align: center;
                     min-width: 100%;
                     padding: 0;
+                }
+
+                @include media($md, max) {
+                    min-width: 10rem;
+                    max-width: 10rem;
+                    width: 10rem;
+                    display: block;
+                    white-space: normal;
+                    margin: 0 auto;
                 }
             }
         }
@@ -289,7 +305,7 @@
                 }
 
                 @include media($md, max) {
-                    width: 55%;
+                    width: 80%;
                     padding-left: 0;
                     padding-right: 0;
                 }
@@ -605,7 +621,6 @@
     &[data-theme="pregnancy"] {
         background: var(--blue-light) !important;
 
-
         .collections__slide::-webkit-scrollbar-thumb {
             background-color: var(--green);
         }
@@ -658,14 +673,11 @@
     }
 }
 
-
-
-.collections__grid__alt{
+.collections__grid__alt {
     width: calc(100% - 0rem);
     margin: 12rem auto -12rem;
 
     @media screen and (max-width: 768px) {
         margin: 16rem auto -12rem;
     }
-    
 }
