--- a/source/sections/instagram.scss
+++ b/source/sections/instagram.scss
@@ -12,6 +12,13 @@
         margin: 0 auto;
         padding: 4rem 2rem;
         color: var(--green);
+
+        @include media($md, max) {
+            h2{
+                font-size: 2.5rem;
+                line-height: 1.2;
+            }
+        }
     }
 
     .eapps-instagram-feed-posts-slider-prev,
