Updated social links and build task

--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -134,10 +134,10 @@
         Social
       {% endcomment %}
       <div class="footer-social">
-        <a href="#" class="footer-social__link">
+        <a href="https://www.facebook.com/profile.php?id=100092964578944" class="footer-social__link">
           <img src="{{ 'facebook.svg' | asset_url }}" loading="lazy" width="32" height="32">
         </a>
-        <a href="#" class="footer-social__link">
+        <a href="https://www.instagram.com/vital.bits" class="footer-social__link">
           <img src="{{ 'instagram.svg' | asset_url }}" loading="lazy" width="32" height="32">
         </a>
       </div>
