--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -188,7 +188,7 @@
 
     <div class="mobile-navigation-menu__item mobile-navigation-menu__item--social">
       <p class="white">Connect with us</p>
-      <a href="/collections/all" class="mobile-navigation-menu__item__icon">
+      <a href="https://www.facebook.com/profile.php?id=100092964578944" class="mobile-navigation-menu__item__icon">
         <img
           src="{{ 'facebook.svg' | asset_url }}"
           width="40"
@@ -196,17 +196,9 @@
           loading="lazy"
         >
       </a>
-      <a href="/collections/all" class="mobile-navigation-menu__item__icon">
+      <a href="https://www.instagram.com/vital.bits" class="mobile-navigation-menu__item__icon">
         <img
           src="{{ 'instagram.svg' | asset_url }}"
-          width="40"
-          height="40"
-          loading="lazy"
-        >
-      </a>
-      <a href="/collections/all" class="mobile-navigation-menu__item__icon">
-        <img
-          src="{{ 'twitter.svg' | asset_url }}"
           width="40"
           height="40"
           loading="lazy"
