--- a/sections/hero-block.liquid
+++ b/sections/hero-block.liquid
@@ -1,7 +1,28 @@
 <div class="hero">
   <div class="hero__background">
     {%- if section.settings.image != blank -%}
-      {{ section.settings.image | image_url: width: 2250 | image_url: height: 1200 | image_tag }}
+      <picture>
+        <!-- Larger screen image -->
+        <source
+          srcset="{{ section.settings.image | image_url: width: 2250 | image_url: height: 1200  }}"
+          media="(min-width: 1280px)"
+        >
+        <!-- Small screen image -->
+        <source
+          srcset="{{ section.settings.image | image_url: width: 960 | image_url: height: 600  }}"
+          media="(max-width: 767px)"
+        >
+
+        <!-- Fallback image -->
+        <img
+          src="{{ section.settings.image | image_url: width: 2250 | image_url: height: 1200  }}"
+          width="1640"
+          height="760"
+          alt="Responsive Image"
+        >
+      </picture>
+
+      {% comment %} {{ section.settings.image | image_url: width: 2250 | image_url: height: 1200 | image_tag }} {% endcomment %}
     {%- endif -%}
   </div>
 
