Updated blog linl

--- a/sections/main-article.liquid
+++ b/sections/main-article.liquid
@@ -81,7 +81,7 @@
   {% endcomment %}
   <div class="related-articles-intro">
     <h2 class="colour--green"><b>You may also like...</b></h2>
-    <a href="/blogs/news" class="arrow-link">Browse all</a>
+    <a href="/blogs/important-bits" class="arrow-link">Browse all</a>
   </div>
 
   
