--- a/source/sections/quick-view.scss
+++ b/source/sections/quick-view.scss
@@ -62,6 +62,12 @@
         transform: rotateY(-25deg);
         transform-origin: 100% 100%;
 
+        
+        @media screen and (max-width: 768px) {
+            width: 100%;
+        }
+
+
         &-head {
             padding: 1rem 2rem 2rem;
 
