--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -336,7 +336,17 @@
             "availability" : "http://schema.org/{% if variant.available %}InStock{% else %}OutOfStock{% endif %}",
             "price" : {{ variant.price | divided_by: 100.00 | json }},
             "priceCurrency" : {{ cart.currency.iso_code | json }},
-            "url" : {{ request.origin | append: variant.url | json }}
+            "url" : {{ request.origin | append: variant.url | json }},
+            "hasMerchantReturnPolicy": {
+              "@type": "MerchantReturnPolicy",
+              "applicableCountry": "NZ",
+              "returnPolicyCategory": "https://schema.org/MerchantReturnFiniteReturnWindow",
+              "merchantReturnDays": 14,
+              "returnMethod": "https://schema.org/ReturnByMail",
+              "returnFees": "https://schema.org/CustomerPaysReturnShippingFees",
+              "itemCondition": "https://schema.org/NewCondition",
+              "inStoreReturnsOffered": false
+            }
           }{% unless forloop.last %},{% endunless %}
         {%- endfor -%}
       ]
