--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -51,9 +51,15 @@
       Favicon
     {% endcomment %}
 
-    {%- if settings.favicon != blank -%}
+    {% comment %} {%- if settings.favicon != blank -%}
       <link rel="icon" type="image/png" href="{{ settings.favicon | image_url: width: 32 | image_url: height: 32 }}">
-    {%- endif -%}
+    {%- endif -%} {% endcomment %}
+    <link rel="icon" type="image/png" href="{{ 'favicon-96x96.png' | asset_url }}" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="{{ 'favicon.svg' | asset_url }}" />
+    <link rel="shortcut icon" href="{{ 'favicon.ico' | asset_url }}" />
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ 'apple-touch-icon.png' | asset_url }}" />
+    <meta name="apple-mobile-web-app-title" content="Vital Bits" />
+    <link rel="manifest" href="{{ 'site.webmanifest' | asset_url }}" />
 
     {% comment %}
       Global constants for site wide CSS styles
@@ -184,12 +190,12 @@
       section 'header'
     -%}
 
-    {%- if request.page_type == 'policy'  -%}
+    {%- if request.page_type == 'policy' -%}
       <div class="banner banner--text banner--">
         <div class="banner-text" style="margin-bottom:0rem">
           <div class="banner-constraint">
             <h1 class="black">
-              <b> {{ page_title | upcase}} </b>
+              <b> {{ page_title | upcase }} </b>
             </h1>
           </div>
         </div>
