--- a/source/utilities/buttons.scss
+++ b/source/utilities/buttons.scss
@@ -1,4 +1,4 @@
-@use 'sass:math';
+@use "sass:math";
 
 [type="submit"],
 .yotpo-default-button,
@@ -47,6 +47,10 @@
 
     &.full {
         display: block;
+    }
+
+    &.purple{
+        background: var(--pink);
     }
 }
 
@@ -101,6 +105,6 @@ $size: 2.4rem;
     }
 }
 
-.h3.afterpay-modal-headline{
+.h3.afterpay-modal-headline {
     font-size: 2.4rem !important;
 }
