Added in plunket logo to the footer Added plunket device to the first product within sliders Updated remoev from cart interactions

--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -80,6 +80,9 @@
       <a href="https://www.afterpay.com/en-NZ" target="_blank" rel="noopener" class="footer-column-payment">
         <img src="{{ 'afterpay-logo.svg' | asset_url }}" loading="lazy" width="125" height="24">
       </a>
+      <a href="https://www.plunket.org.nz/" target="_blank" rel="noopener" class="footer-column-plunket">
+        <img src="{{ 'plunket_logo_footer.png' | asset_url }}" loading="lazy" width="172" height="124">
+      </a>
     </div>
     {% comment %}
       Column
