--- a/source/sections/product.scss
+++ b/source/sections/product.scss
@@ -38,12 +38,27 @@
 
     &-slider {
         width: 100%;
+
         &-item {
             @include aspect(1, 1);
             width: 100%;
             overflow: hidden;
 
-            img {
+            .product-slider-item-endorsement {
+                position: absolute;
+                z-index: 3;
+                aspect-ratio: 1;
+                width: 15%;
+                right: 1rem;
+                top: 1rem;
+
+                svg {
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+
+            > img {
                 position: absolute;
                 top: 0;
                 left: 0;
