--- a/source/sections/sidecart.scss
+++ b/source/sections/sidecart.scss
@@ -171,7 +171,7 @@
                         }
 
                         path {
-                            fill: var(--grey-light);
+                            fill: var(--green);
                         }
                     }
                 }
