--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -81,7 +81,7 @@
         <img src="{{ 'afterpay-logo.svg' | asset_url }}" loading="lazy" width="125" height="24">
       </a>
       <a href="https://www.plunket.org.nz/" target="_blank" rel="noopener" class="footer-column-plunket">
-        <img src="{{ 'plunket_logo_footer.png' | asset_url }}" loading="lazy" width="172" height="124">
+        <img src="{{ 'plunket_logo_footer.svg' | asset_url }}" loading="lazy" width="755" height="755">
       </a>
     </div>
     {% comment %}
